Changes for Perl programming language extension Parse-CPAN-Meta

{{$NEXT}}

    [CHANGED]

    - load_file will now attempt to detect YAML/JSON content if the suffix
      is not .json, .yml or .yaml

1.4413    2014-02-17 20:04:23-05:00 America/New_York

    [FIXED]

    - UTF-8 decoding is done differently to avoid requiring
      a newer version of Encode (Graham Knop)

1.4412    2014-02-17 07:14:43-05:00 America/New_York

    [FIXED]

    - Added prerequisite on Encode 2.11 (Paul Howarth)

1.4411    2014-02-16 23:06:00-05:00 America/New_York

    [FIXED]

    - Invalid UTF-8 encoding in YAML files are now replaced with "PERLQQ"
      quoting from the Encode module and without warnings.

    - Removed legacy test modifications for $ENV{PERL_CORE}

1.4410    2014-02-16 00:47:48-05:00 America/New_York

    [INCOMPATIBLE CHANGES]

    - Dropped support for Perl's before v5.8.1 to ensure proper
      UTF-8 and IO layer support

    [CHANGED]

    - Updated CPAN::Meta::YAML prereq to 0.011 due to deprecation
      of 'errstr' and consistent use of exceptions

1.4409    2013-09-23 13:17:18 America/New_York

    [FIXED]

    - updated Makefile.PL logic to support PERL_NO_HIGHLANDER

1.4408    2013-09-23 11:06:35 America/New_York

    [FIXED]

    - Installation on Perls < 5.12 will uninstall older versions installed
      due to being bundled with ExtUtils::MakeMaker

1.4407    2013-09-08 10:16:29 America/New_York

    - Fixed incorrect resource metadata

1.4406    2013-09-08 09:59:28 America/New_York

    - Fixed improperly encoded META.yml

1.4405    2013-07-17 21:43:34 America/New_York

    - Fixed incorrect "return ... or die ..." constructs

    - Converted distribution to Dist::Zilla management

    - Noted new repository location in the Github Perl-Toolchain-Gang
      organization

1.4404 2012-04-05

    - Protected tests from user PERL_YAML/JSON_BACKEND

1.4403 2012-04-01

    - Bumped prereqs: JSON::PP to 2.27200 and CPAN::Meta::YAML to 0.008
