@@ -21,14 +21,21 @@ sub load_file {
   elsif ($filename =~ /\.json$/) {
     return $class->load_json_string($meta);
   }
-  elsif ( $meta =~ /^---/ ) { # looks like YAML
-    return $class->load_yaml_string($meta);
+  else {
+    $class->load_string($meta); # try to detect yaml/json
   }
-  elsif ( $meta =~ /^\s*\{/ ) { # looks like JSON
-    return $class->load_json_string($meta);
+}
+
+sub load_string {
+  my ($class, $string) = @_;
+  if ( $string =~ /^---/ ) { # looks like YAML
+    return $class->load_yaml_string($string);
+  }
+  elsif ( $string =~ /^\s*\{/ ) { # looks like JSON
+    return $class->load_json_string($string);
   }
   else { # maybe doc-marker-free YAML
-    return $class->load_yaml_string($meta);
+    return $class->load_yaml_string($string);
   }
 }
 
@@ -193,6 +200,13 @@ C<load_yaml_string>.
 This method deserializes the given string of JSON and the result.  
 If the source was UTF-8 encoded, the string must be decoded before calling
 C<load_json_string>.
+
+=head2 load_string
+
+  my $metadata_structure = Parse::CPAN::Meta->load_string($some_string);
+
+If you don't know whether a string contains YAML or JSON data, this method
+will use some heuristics and guess.  If it can't tell, it assumes YAML.
 
 =head2 yaml_backend
 
